[gd_scene load_steps=13 format=2]

[ext_resource path="res://Ogre.gd" type="Script" id=1]
[ext_resource path="res://images/NPC/OgreNPC/ogre_idle_anim_f0.png" type="Texture" id=2]
[ext_resource path="res://images/NPC/OgreNPC/ogre_idle_anim_f1.png" type="Texture" id=3]
[ext_resource path="res://images/NPC/OgreNPC/ogre_idle_anim_f2.png" type="Texture" id=4]
[ext_resource path="res://images/NPC/OgreNPC/ogre_idle_anim_f3.png" type="Texture" id=5]
[ext_resource path="res://sound/Ogre sounds/sound 1.wav" type="AudioStream" id=6]
[ext_resource path="res://sound/Ogre sounds/sound 2.wav" type="AudioStream" id=7]
[ext_resource path="res://images/Items/bag.png" type="Texture" id=8]
[ext_resource path="res://OgreItem.gd" type="Script" id=9]
[ext_resource path="res://keyObject.tscn" type="PackedScene" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 43.7557, 10 )

[node name="Ogre" type="Area2D"]
position = Vector2( 688.222, 420.946 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 203.9, -23.5985 )
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 179.67, -3.08002 )
shape = SubResource( 2 )

[node name="audio1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="audio2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="Response1" type="Label" parent="."]
margin_left = 165.914
margin_top = -74.1351
margin_right = 361.914
margin_bottom = -9.13513
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "BADD in HEX"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Response2" type="Label" parent="."]
margin_left = 155.8
margin_top = -70.3002
margin_right = 262.8
margin_bottom = -56.3002
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Take bag and go"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OgreItem" type="StaticBody2D" parent="."]
position = Vector2( 151.499, -15.4757 )
scale = Vector2( 0.25, 0.25 )
script = ExtResource( 9 )

[node name="OgreItemArea" type="Area2D" parent="OgreItem"]

[node name="keyObject" parent="OgreItem/OgreItemArea" instance=ExtResource( 11 )]
position = Vector2( -262.132, 68.4176 )
scale = Vector2( 4, 4 )

[node name="Sprite" type="Sprite" parent="OgreItem/OgreItemArea/keyObject"]
position = Vector2( 3.84085, -2.79345 )
scale = Vector2( 0.716299, 0.825415 )
texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="OgreItem/OgreItemArea"]
[connection signal="finished" from="audio1" to="." method="_on_audio1_finished"]
[connection signal="finished" from="audio2" to="." method="_on_audio2_finished"]
